Larger Sized Image Overlap, Bug Fixes:
Commiting this will:
- Edit margin, sizes, etc so that most margins with relative units do not clearly overlap on bigger viewports.
-Rename some CSS Stylization to be more accurate to what it's container element is
-Edit the indentation  in the CSS files to be more accurate and syntaxilly correct
-Format the CSS code with prettier

--- a/involved-style.css
+++ b/involved-style.css
@@ -8,49 +8,46 @@
 -----------------------------------------------------*/
 
 .get-involved {
-    padding: 1.5em 0 4em 0;
+  padding: 1.5em 0 4em 0;
 }
 
 .get-involved h2 {
-    background-color: #2A72F7; 
-    width: 75%;
-    margin: auto;
-    padding: 0.9em;
-    text-align: center;
+  background-color: #2a72f7;
+  width: 75%;
+  margin: auto;
+  padding: 0.9em;
+  text-align: center;
 }
 
 .get-involved img {
-    margin: 1.5em 5em 2.5em 5.5em;
+  margin: 1.5em 5em 2.5em 5.5em;
 }
 
 .get-involved p {
-    color: #2A72F7;
-    font-size: 1.2rem;
-    text-align: center;
+  color: #2a72f7;
+  font-size: 1.2rem;
+  text-align: center;
 }
 
 .get-involved h3 {
-    text-align: center;
-    padding: 1.5em;
+  text-align: center;
+  padding: 1.5em;
 }
 
 .get-involved a {
-    background-color: #000C5A;
-    width: 75%;
-    margin: auto;
-    display: block;
-    text-align: center;
-    padding: 1em 0;
-    font-size: 1.3rem;
-    border-radius: 3em;
-    border: 0.3em solid #2A72F7;
+  background-color: #000c5a;
+  width: 75%;
+  margin: auto;
+  display: block;
+  text-align: center;
+  padding: 1em 0;
+  font-size: 1.3rem;
+  border-radius: 3em;
+  border: 0.3em solid #2a72f7;
 }
 
-
-
 @media only screen and (min-width: 768px) {
-
-/* STYLES ----------------------------------
+  /* STYLES ----------------------------------
 1. Global settings (resets such as border-box)
 2. Typography (headings, paragraphs, lists, buttons)
 3. Layout structure (body, header, footer, sidebar)
@@ -59,72 +56,69 @@
 6. Page-specific (styles specific to individual locations)
 -----------------------------------------------------*/
 
-
-.involved h2 {
+  .involved h2 {
     font-size: 2.8rem;
     text-align: center;
     margin: 1.3em;
-}
+  }
 
-.involved p {
+  .involved p {
     margin: 2.8em 1.3em 1.1em 1.3em;
     text-align: center;
     font-size: 1.85rem;
-}
+  }
 
-.involved img {
+  .involved img {
     margin: auto;
     width: 85%;
-    height: 32.3em
-}
+    height: 32.3em;
+  }
 
-
-.get-involved { 
+  .get-involved {
     transform: scale(0.8);
-    border: 0.2em solid #2A72F7;
+    border: 0.2em solid #2a72f7;
     float: left;
-    width: calc(33.3% - 1.0em);
+    width: calc(33.3% - 1em);
     padding: 0.5em;
     margin: 0.5em;
-}
+  }
 
-.get-involved h3 {
+  .get-involved h3 {
     margin: auto;
     width: 85%;
     border-radius: 3.8rem;
-    border: 0.3em solid #7EEAFB;
+    border: 0.3em solid #7eeafb;
     font-size: 1.9rem;
-    color: #7EEAFB;
-}
+    color: #7eeafb;
+  }
 
-.get-involved h2 {
-    background-color: #2A72F7; 
+  .get-involved h2 {
+    background-color: #2a72f7;
     width: 75%;
     margin: auto;
     padding: 0.9em;
     text-align: center;
-}
+  }
 
-.get-involved img {
+  .get-involved img {
     width: 100%;
     margin: 1.8em -1.8em 0 -1.8em;
     height: 29.1em;
-}
+  }
 
-
-.get-involved p {
-    color: #2A72F7;
+  .get-involved p {
+    color: #2a72f7;
     font-size: 2.3rem;
     text-align: center;
-}
+  }
 
-.get-involved h3 {
+  .get-involved h3 {
     text-align: center;
     padding: 1.5em;
-}
+  }
 
-.get-involved a {
-    background-color: #000C5A;
+  .get-involved a {
+    background-color: #000c5a;
     width: 75%;
     margin: auto;
     display: block;
@@ -132,21 +126,20 @@
     padding: 1em 0;
     font-size: 1.9rem;
     border-radius: 1em;
-    border: 0.3em solid #2A72F7;
-}
+    border: 0.3em solid #2a72f7;
+  }
 
-.volunteer, .vendor, .sponser {
+  .volunteer,
+  .vendor,
+  .sponser {
     position: relative;
     top: 0.6em;
     height: 61.9em;
-}
-
-
+  }
 }
 
 @media only screen and (min-width: 1200px) {
-
-    /* STYLES ----------------------------------
+  /* STYLES ----------------------------------
 1. Global settings (resets such as border-box)
 2. Typography (headings, paragraphs, lists, buttons)
 3. Layout structure (body, header, footer, sidebar)
@@ -155,74 +148,71 @@
 6. Page-specific (styles specific to individual locations)
 -----------------------------------------------------*/
 
-
-.involved h2 {
+  .involved h2 {
     font-size: 2.2rem;
     text-align: center;
     margin: 1.3em;
-}
+  }
 
-.involved p {
+  .involved p {
     margin: 2.8em 1.3em 1.1em 1.2em;
     text-align: center;
     font-size: 1.65rem;
-}
+  }
 
-.involved img {
+  .involved img {
     margin: auto;
     width: 75%;
-    height: 32.3em
-}
+    height: 32.3em;
+  }
 
-
-.get-involved { 
+  .get-involved {
     position: relative;
     top: -12em;
     transform: scale(0.65);
-    border: 0.2em solid #2A72F7;
+    border: 0.2em solid #2a72f7;
     float: left;
-    width: calc(33.3% - 1.0em);
+    width: calc(33.3% - 1em);
     padding: 0.5em 0.5em 0em 0.5em;
     margin: 0.5em;
-}
+  }
 
-.get-involved h3 {
+  .get-involved h3 {
     margin: auto;
     width: 85%;
     border-radius: 3.8rem;
-    border: 0.3em solid #7EEAFB;
+    border: 0.3em solid #7eeafb;
     font-size: 1.9rem;
-    color: #7EEAFB;
-}
+    color: #7eeafb;
+  }
 
-.get-involved h2 {
-    background-color: #2A72F7; 
+  .get-involved h2 {
+    background-color: #2a72f7;
     width: 75%;
     margin: auto;
     padding: 0.9em;
     text-align: center;
-}
+  }
 
-.get-involved img {
+  .get-involved img {
     width: 100%;
     margin: 1.8em -1.8em 0 -1.8em;
     height: 29.1em;
-}
+  }
 
-
-.get-involved p {
-    color: #2A72F7;
+  .get-involved p {
+    color: #2a72f7;
     font-size: 2.3rem;
     text-align: center;
-}
+  }
 
-.get-involved h3 {
+  .get-involved h3 {
     text-align: center;
     padding: 1.5em;
-}
+  }
 
-.get-involved a {
-    background-color: #000C5A;
+  .get-involved a {
+    background-color: #000c5a;
     width: 75%;
     margin: auto;
     display: block;
@@ -230,13 +220,14 @@
     padding: 1em 0;
     font-size: 1.9rem;
     border-radius: 1em;
-    border: 0.3em solid #2A72F7;
-}
+    border: 0.3em solid #2a72f7;
+  }
 
-.volunteer, .vendor, .sponser {
+  .volunteer,
+  .vendor,
+  .sponser {
     position: relative;
     top: 0.1em;
     height: 39.9em;
-}
-
+  }
 }
